--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: REST API with curl
-      run: |
+      uses: azzarb/curl-demo-with-postman@main
+    - run: |
         curl -X GET "https://ralphjsmit.com/api-endpoint-webhook-github-actions"
