--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
     - name: REST API with curl
       run: |
        # curl -X GET "https://ralphjsmit.com/api-endpoint-webhook-github-actions"
-       # curl -X GET "https://api.github.com/users/azzarb/repos"
+        curl -X GET "https://api.github.com/users/azzarb/repos"
     
 
