--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: REST API with curl
+      shell: bash
       run: |
        # curl -X GET "https://ralphjsmit.com/api-endpoint-webhook-github-actions"
         curl -X GET "https://api.github.com/users/azzarb/repos " > ./getdetails.json
