--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,10 @@ jobs:
       run: |
        # curl -X GET "https://ralphjsmit.com/api-endpoint-webhook-github-actions"
        curl -X GET "https://api.github.com/users/azzarb/repos" > ./getdata.json
+       # jq -r '.' getdata.json
+       jq -r '.[1]' getdata.json
        # jq -r '.[] | .id ' getdata.json
-       jq -r '.' getdata.json
+       
        # jq -r '.[0] | .id, .full_name' getdata.json
        # jq -r '.[0] | 
       
