--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
        # jq -r '.[1]' getdata.json
        # jq -r '.[] | .id ' getdata.json
        # jq -r '.[0] | .id, .full_name' getdata.json
-       jq -r '.[1] | .owner .id' getdata.json
+       # jq -r '.[1] | .owner .id' getdata.json
+       jq -r '.[2] | .owner .login' getdata.json
       
     
 
