--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,10 @@ jobs:
        # jq -r '.[] | .id ' getdata.json
        # jq -r '.[0] | .id, .full_name' getdata.json
        # jq -r '.[1] | .owner .id' getdata.json
-       jq -r '.[2] | .id ' getdata.json
-       jq -r '.[2] | .owner .id' getdata.json
-       jq -r '.[2] | .owner .login' getdata.json
+       # jq -r '.[2] | .id ' getdata.json
+       #jq -r '.[2] | .owner .id' getdata.json
+       #jq -r '.[2] | .owner .login' getdata.json
+       jq -r '.[] | .name' getdata.json
        
       
     
